@@ -548,6 +548,7 @@ static void pick_up_object (object *pl, object *op, object *tmp, int nrof)
     }
     if (QUERY_FLAG (tmp, FLAG_NO_DROP))
 	return;
+
     if(QUERY_FLAG(tmp,FLAG_WAS_WIZ) && !QUERY_FLAG(pl, FLAG_WAS_WIZ)) {
 	new_draw_info(NDI_UNIQUE, 0,pl, "The object disappears in a puff of smoke!");
 	new_draw_info(NDI_UNIQUE, 0,pl, "It must have been an illusion.");
@@ -560,19 +561,24 @@ static void pick_up_object (object *pl, object *op, object *tmp, int nrof)
     
     if (nrof > tmp_nrof || nrof == 0)
 	nrof = tmp_nrof;
+
     /* Figure out how much weight this object will add to the player */
     weight = tmp->weight * nrof;
     if (tmp->inv) weight += tmp->carrying * (100 - tmp->stats.Str) / 100;
+
     if (pl->stats.Str <= MAX_STAT)
         effective_weight_limit = weight_limit[pl->stats.Str];
     else
         effective_weight_limit = weight_limit[MAX_STAT];
+
     if ((pl->weight + pl->carrying + weight) > effective_weight_limit) {
 	new_draw_info(0, 0,pl,"That item is too heavy for you to pick up.");
 	return;
     }
+
     if (settings.real_wiz == FALSE && QUERY_FLAG(pl, FLAG_WAS_WIZ))
 	SET_FLAG(tmp, FLAG_WAS_WIZ);
+
     if (nrof != tmp_nrof) {
 	object *tmp2 = tmp;
         tag_t tmp2_tag = tmp2->count;
@@ -590,6 +596,7 @@ static void pick_up_object (object *pl, object *op, object *tmp, int nrof)
 	    remove_ob(tmp); /* Unlink it */
 	}
     }
+
     if(QUERY_FLAG(tmp, FLAG_UNPAID))
 	(void) sprintf(buf,"%s will cost you %s.", query_name(tmp),
 		query_cost_string(tmp,pl,F_BUY | F_SHOP));
@@ -609,6 +616,9 @@ static void pick_up_object (object *pl, object *op, object *tmp, int nrof)
      * usable by players
      */
     if(pl->type!=PLAYER) return;
+
+    /* Additional weight changes speed, etc */
+    fix_player(pl);
 
     /* These are needed to update the weight for the container we
      * are putting the object in.
