@@ -17,6 +17,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+server/c_object.c:  Add call to fix_player() in pick_up_ob() - this causes
+  player weight & speed to be recalculated - fixes bug 1799411 where this
+  wasn't happening.
+MSW 2007-10-01
+
 server/plugins.c: fix wrong #define leading to crashes.
 Nicolas Weeger 2007-09-28
 
